<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaswin.sakha.LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@id/password"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="140dp"
        android:background="@drawable/edittext_round"
        android:hint="@string/userid"
        android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_round"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/email"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:hint="@string/password"
            android:id="@+id/password"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_round"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/password"
            android:layout_marginTop="15dp"
            android:text="@string/loginbutton"
            android:id="@+id/login"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/login"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/helpText"
            android:textAlignment="center"
            android:clickable="true"
            android:id="@+id/text"
            android:focusable="true"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:layout_below="@id/text"
                android:weightSum="100"
                android:id="@+id/divider"
                >

                <View android:background="#000000"
                    android:layout_width = "0dp"
                    android:layout_height="1dp"
                    android:layout_weight="45"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:alpha="0.5"
                    android:layout_marginStart="10dp"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="20dp"
                 android:layout_weight="10"
                 android:text="@string/or"
                 android:textAlignment="center"/>
                <View android:background="#000000"
                    android:layout_width = "0dp"
                    android:layout_height="1dp"
                    android:layout_weight="45"
                    android:layout_marginTop="10dp"
                    android:alpha="0.5"
                    />
            </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/divider"
        android:id="@+id/loginoptions"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">



        <Button
            android:id="@+id/login_button_facebook"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_round"
            android:text="Login with Facebook"
            android:textColor="@color/colorWhite" />

        <Button

            android:id="@+id/login_button_google"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/login_button_facebook"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_round"
            android:drawableLeft="@drawable/google1"
            android:text="Login with Google"
            android:textColor="@color/colorWhite" />


    </RelativeLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="SignUp" />



</RelativeLayout>
